new room client side

--- a/public/d/sass/screen.sass
+++ b/public/d/sass/screen.sass
@@ -1,17 +1,145 @@
-body, html
-  margin: 0
-  padding: 0
+=button-sm
+  height: 25px
+  padding: 0 10px
+  font-size: 12px
+  line-height: 25px
+
+*
+  -moz-box-sizing: border-box
+  -webkit-box-sizing: border-box
+  box-sizing: border-box
+
+html, body
   height: 100%
+  padding: 0
+  margin: 0
+
+body
+  font: normal 16px/1.4 arial
+  min-height: 650px
+  min-width: 1100px
+  position: relative
+
+#wrap
+  height: 650px
+  width: 1100px
+  position: absolute
+  top: 50%
+  left: 50%
+  margin: -325px 0 0 -550px
+
+#user-panel
+  height: 24px
+  margin: 3px 0
+  position: relative
+  text-align: center
+  .info
+    position: absolute
+    right: 0
+    top: 0
+    color: #000
+    .logout
+      height: 20px
+      line-height: 20px
+      background: #666
+      border-radius: 5px
+      cursor: pointer
+      padding: 0 10px
+      margin-left: 10px
+      color: #fff
+  ul, li
+    margin: 0
+    padding: 0
+    list-style: none
+  ul
+    display: inline-block
+    text-align: center
+  li
+    display: inline-block
+    background: #68848A
+    border-radius: 3px
+    padding: 2px 10px
+    margin: 0 5px
+    cursor: pointer
+    color: #fff
+    &:hover
+      background: #21211E
+  .room-left
+    display: inline-block
+    position: absolute
+    margin-left: 15px
+    button
+      +button-sm
+      background: #940000
 
 
-.room-left
+
+.room-list
+  height: 620px
+  background: #969696
+  border-radius: 10px
+  position: relative
+  padding: 10px
+
+.room-list
+  width: 440px
+
+.room-new-add
+  position: absolute
+  right: 10px
+  bottom: 10px
+
+
+
+
+
+.room-left, .game, #user-panel .room-left
   display: none
+.user-in-room #user-panel .room-left
+  display: inline-block
 
 .user-in-room
-  .room-new, .room-list
+  .game
+    display: block
+  .room
     display: none
 
-.user-in-room .room-left
-  display: block
 
 
+
+ol
+  list-style: none
+  padding: 0
+  margin: 0
+  overflow-y: scroll
+  color: #fff
+  height: 540px
+  ul, li
+    list-style: none
+    margin: 0
+    padding: 0
+  >li
+    background: #4A4343
+    border-radius: 5px
+    padding: 5px
+    margin: 2px
+    &:hover
+      background: #21211E
+  ul li
+    &.m
+      text-align: center
+    &.r
+      text-align: right
+button
+  height: 50px
+  padding: 0 20px
+  font-size: 20px
+  line-height: 50px
+  text-align: center
+  background: #68848A
+  border: 0
+  color: #fff
+  border-radius: 10px
+  cursor: pointer
+  &:hover
+    background: #21211E
