--- a/public/d/css/screen.css
+++ b/public/d/css/screen.css
@@ -1,21 +1,189 @@
-/* line 1, ../sass/screen.sass */
-body, html {
+/* line 7, ../sass/screen.sass */
+* {
+  -moz-box-sizing: border-box;
+  -webkit-box-sizing: border-box;
+  box-sizing: border-box;
+}
+
+/* line 12, ../sass/screen.sass */
+html, body {
+  height: 100%;
+  padding: 0;
+  margin: 0;
+}
+
+/* line 17, ../sass/screen.sass */
+body {
+  font: normal 16px/1.4 arial;
+  min-height: 650px;
+  min-width: 1100px;
+  position: relative;
+}
+
+/* line 23, ../sass/screen.sass */
+#wrap {
+  height: 650px;
+  width: 1100px;
+  position: absolute;
+  top: 50%;
+  left: 50%;
+  margin: -325px 0 0 -550px;
+}
+
+/* line 31, ../sass/screen.sass */
+#user-panel {
+  height: 24px;
+  margin: 3px 0;
+  position: relative;
+  text-align: center;
+}
+/* line 36, ../sass/screen.sass */
+#user-panel .info {
+  position: absolute;
+  right: 0;
+  top: 0;
+  color: black;
+}
+/* line 41, ../sass/screen.sass */
+#user-panel .info .logout {
+  height: 20px;
+  line-height: 20px;
+  background: #666666;
+  border-radius: 5px;
+  cursor: pointer;
+  padding: 0 10px;
+  margin-left: 10px;
+  color: white;
+}
+/* line 50, ../sass/screen.sass */
+#user-panel ul, #user-panel li {
   margin: 0;
   padding: 0;
-  height: 100%;
+  list-style: none;
+}
+/* line 54, ../sass/screen.sass */
+#user-panel ul {
+  display: inline-block;
+  text-align: center;
+}
+/* line 57, ../sass/screen.sass */
+#user-panel li {
+  display: inline-block;
+  background: #68848a;
+  border-radius: 3px;
+  padding: 2px 10px;
+  margin: 0 5px;
+  cursor: pointer;
+  color: white;
+}
+/* line 65, ../sass/screen.sass */
+#user-panel li:hover {
+  background: #21211e;
+}
+/* line 67, ../sass/screen.sass */
+#user-panel .room-left {
+  display: inline-block;
+  position: absolute;
+  margin-left: 15px;
+}
+/* line 71, ../sass/screen.sass */
+#user-panel .room-left button {
+  height: 25px;
+  padding: 0 10px;
+  font-size: 12px;
+  line-height: 25px;
+  background: #940000;
 }
 
-/* line 7, ../sass/screen.sass */
-.room-left {
+/* line 77, ../sass/screen.sass */
+.room-list {
+  height: 620px;
+  background: #969696;
+  border-radius: 10px;
+  position: relative;
+  padding: 10px;
+}
+
+/* line 84, ../sass/screen.sass */
+.room-list {
+  width: 440px;
+}
+
+/* line 87, ../sass/screen.sass */
+.room-new-add {
+  position: absolute;
+  right: 10px;
+  bottom: 10px;
+}
+
+/* line 96, ../sass/screen.sass */
+.room-left, .game, #user-panel .room-left {
   display: none;
 }
 
-/* line 11, ../sass/screen.sass */
-.user-in-room .room-new, .user-in-room .room-list {
-  display: none;
+/* line 98, ../sass/screen.sass */
+.user-in-room #user-panel .room-left {
+  display: inline-block;
 }
 
-/* line 14, ../sass/screen.sass */
-.user-in-room .room-left {
+/* line 102, ../sass/screen.sass */
+.user-in-room .game {
   display: block;
+}
+/* line 104, ../sass/screen.sass */
+.user-in-room .room {
+  display: none;
+}
+
+/* line 110, ../sass/screen.sass */
+ol {
+  list-style: none;
+  padding: 0;
+  margin: 0;
+  overflow-y: scroll;
+  color: white;
+  height: 540px;
+}
+/* line 117, ../sass/screen.sass */
+ol ul, ol li {
+  list-style: none;
+  margin: 0;
+  padding: 0;
+}
+/* line 121, ../sass/screen.sass */
+ol > li {
+  background: #4a4343;
+  border-radius: 5px;
+  padding: 5px;
+  margin: 2px;
+}
+/* line 126, ../sass/screen.sass */
+ol > li:hover {
+  background: #21211e;
+}
+/* line 129, ../sass/screen.sass */
+ol ul li.m {
+  text-align: center;
+}
+/* line 131, ../sass/screen.sass */
+ol ul li.r {
+  text-align: right;
+}
+
+/* line 133, ../sass/screen.sass */
+button {
+  height: 50px;
+  padding: 0 20px;
+  font-size: 20px;
+  line-height: 50px;
+  text-align: center;
+  background: #68848a;
+  border: 0;
+  color: white;
+  border-radius: 10px;
+  cursor: pointer;
+}
+/* line 144, ../sass/screen.sass */
+button:hover {
+  background: #21211e;
 }
