--- a/public/d/sass/screen.sass
+++ b/public/d/sass/screen.sass
@@ -1,3 +1,5 @@
+@import "compass"
+
 =button-sm
   height: 25px
   padding: 0 10px
@@ -106,7 +108,25 @@ body
 
 
 
-
+.room-list li
+  +clearfix
+  position: relative
+  cursor: pointer
+  strong
+    +float-left
+    width: 50%
+  span
+    +float-right
+    width: 30%
+  &:after
+    content: attr(data-users) "/" attr(data-max)
+    position: absolute
+    display: block
+    width: 20%
+    top: 0
+    left: 50%
+    margin-top: 5px
+    text-align: center
 ol
   list-style: none
   padding: 0
