--- a/public/d/css/screen.css
+++ b/public/d/css/screen.css
@@ -1,26 +1,31 @@
-/* line 9, ../sass/screen.sass */
+/* line 24, ../sass/screen.sass */
 * {
   -moz-box-sizing: border-box;
   -webkit-box-sizing: border-box;
   box-sizing: border-box;
 }
 
-/* line 14, ../sass/screen.sass */
+/* line 29, ../sass/screen.sass */
 html, body {
   height: 100%;
   padding: 0;
   margin: 0;
 }
 
-/* line 19, ../sass/screen.sass */
+/* line 33, ../sass/screen.sass */
+html {
+  font-size: 62.5%;
+}
+
+/* line 36, ../sass/screen.sass */
 body {
-  font: normal 16px/1.4 arial;
+  font: normal 1.5rem/1.4 arial;
   min-height: 650px;
   min-width: 1100px;
   position: relative;
 }
 
-/* line 25, ../sass/screen.sass */
+/* line 42, ../sass/screen.sass */
 #wrap {
   height: 650px;
   width: 1100px;
@@ -30,21 +35,21 @@ body {
   margin: -325px 0 0 -550px;
 }
 
-/* line 33, ../sass/screen.sass */
+/* line 50, ../sass/screen.sass */
 #user-panel {
   height: 24px;
   margin: 3px 0;
   position: relative;
   text-align: center;
 }
-/* line 38, ../sass/screen.sass */
+/* line 55, ../sass/screen.sass */
 #user-panel .info {
   position: absolute;
   right: 0;
   top: 0;
   color: black;
 }
-/* line 43, ../sass/screen.sass */
+/* line 60, ../sass/screen.sass */
 #user-panel .info .logout {
   height: 20px;
   line-height: 20px;
@@ -55,18 +60,18 @@ body {
   margin-left: 10px;
   color: white;
 }
-/* line 52, ../sass/screen.sass */
+/* line 69, ../sass/screen.sass */
 #user-panel ul, #user-panel li {
   margin: 0;
   padding: 0;
   list-style: none;
 }
-/* line 56, ../sass/screen.sass */
+/* line 73, ../sass/screen.sass */
 #user-panel ul {
   display: inline-block;
   text-align: center;
 }
-/* line 59, ../sass/screen.sass */
+/* line 76, ../sass/screen.sass */
 #user-panel li {
   display: inline-block;
   background: #68848a;
@@ -76,85 +81,282 @@ body {
   cursor: pointer;
   color: white;
 }
-/* line 67, ../sass/screen.sass */
+/* line 84, ../sass/screen.sass */
 #user-panel li:hover {
   background: #21211e;
 }
-/* line 69, ../sass/screen.sass */
+/* line 86, ../sass/screen.sass */
 #user-panel .room-left {
   display: inline-block;
   position: absolute;
   margin-left: 15px;
 }
-/* line 73, ../sass/screen.sass */
-#user-panel .room-left button {
-  height: 25px;
-  padding: 0 10px;
-  font-size: 12px;
-  line-height: 25px;
+/* line 90, ../sass/screen.sass */
+#user-panel .room-left a {
+  text-align: center;
+  background: #68848a;
+  border: 0;
+  color: white;
+  cursor: pointer;
+  text-decoration: none;
   background: #940000;
+  height: 2.5rem;
+  padding: 0 1.25rem;
+  font-size: 1.25rem;
+  line-height: 2.5rem;
+  border-radius: 0.5rem;
+}
+/* line 10, ../sass/screen.sass */
+#user-panel .room-left a:hover {
+  background: #21211e;
 }
 
-/* line 79, ../sass/screen.sass */
-.room-list {
+/* line 95, ../sass/screen.sass */
+.room, .game {
   height: 620px;
-  background: #969696;
-  border-radius: 10px;
+}
+
+/* line 98, ../sass/screen.sass */
+.room .chat, .room-list, .room-preview, .game {
+  padding: 1rem;
   position: relative;
-  padding: 10px;
+  border-radius: 1rem;
+  background: #969696;
 }
 
-/* line 86, ../sass/screen.sass */
-.room-list {
-  width: 440px;
+/* line 104, ../sass/screen.sass */
+.chat, .room-list, .room-preview {
+  display: inline;
+  float: left;
+  height: 100%;
 }
 
-/* line 89, ../sass/screen.sass */
+/* line 108, ../sass/screen.sass */
 .room-new-add {
   position: absolute;
   right: 10px;
   bottom: 10px;
 }
 
-/* line 98, ../sass/screen.sass */
+/* line 113, ../sass/screen.sass */
+.room .chat {
+  width: 28%;
+}
+
+/* line 117, ../sass/screen.sass */
+.chat ol {
+  height: 90%;
+  font-size: 1.2rem;
+  color: white;
+}
+/* line 121, ../sass/screen.sass */
+.chat ol > li {
+  border-radius: 0.24rem;
+  padding: 0.24rem;
+  margin: 0.12rem;
+}
+/* line 123, ../sass/screen.sass */
+.chat ol i {
+  color: #ddcccc;
+  font-style: normal;
+}
+/* line 126, ../sass/screen.sass */
+.chat ol i:before, .chat ol i:after {
+  color: white;
+}
+/* line 128, ../sass/screen.sass */
+.chat ol i:before {
+  content: "[";
+}
+/* line 130, ../sass/screen.sass */
+.chat ol i:after {
+  content: "]";
+}
+/* line 132, ../sass/screen.sass */
+.chat ol strong {
+  font-weight: normal;
+  color: #969696;
+}
+/* line 135, ../sass/screen.sass */
+.chat ol strong:after {
+  content: " :";
+  color: white;
+}
+/* line 138, ../sass/screen.sass */
+.chat textarea {
+  width: 100%;
+  margin-top: 1rem;
+  height: 9%;
+  border: 0.5rem solid #69858b;
+}
+
+/* line 144, ../sass/screen.sass */
+.room-list {
+  width: 40%;
+  margin: 0 0.5%;
+}
+/* line 147, ../sass/screen.sass */
+.room-list ol {
+  height: 90%;
+}
+
+/* line 150, ../sass/screen.sass */
+.room-preview {
+  width: 30%;
+}
+/* line 152, ../sass/screen.sass */
+.room-preview .preview {
+  position: relative;
+  padding: 0.5rem;
+  background: #68848a;
+  line-height: 1;
+}
+/* line 157, ../sass/screen.sass */
+.room-preview .preview strong, .room-preview .preview i {
+  display: block;
+  position: absolute;
+  padding: 0.5rem;
+  border-radius: 0.5rem;
+  background: rgba(105, 133, 139, 0.7);
+  color: white;
+  font-style: normal;
+}
+/* line 165, ../sass/screen.sass */
+.room-preview .preview strong {
+  top: 5%;
+  left: 5%;
+}
+/* line 168, ../sass/screen.sass */
+.room-preview .preview i {
+  bottom: 5%;
+  left: 5%;
+}
+/* line 171, ../sass/screen.sass */
+.room-preview .teams {
+  height: 40%;
+}
+/* line 173, ../sass/screen.sass */
+.room-preview .teams[data-teams='2'] {
+  overflow: hidden;
+  *zoom: 1;
+}
+/* line 175, ../sass/screen.sass */
+.room-preview .teams[data-teams='2'] > div {
+  display: inline;
+  float: left;
+  width: 50%;
+}
+/* line 178, ../sass/screen.sass */
+.room-preview .teams > div {
+  height: 100%;
+  position: relative;
+}
+/* line 181, ../sass/screen.sass */
+.room-preview .teams ol {
+  height: 90%;
+  font-size: 1.2rem;
+}
+/* line 184, ../sass/screen.sass */
+.room-preview .teams ol > li {
+  border-radius: 0.24rem;
+  padding: 0.24rem;
+  margin: 0.12rem;
+}
+/* line 186, ../sass/screen.sass */
+.room-preview .teams ol strong {
+  font-weight: normal;
+}
+/* line 188, ../sass/screen.sass */
+.room-preview .teams button {
+  height: 2.2rem;
+  padding: 0 1.1rem;
+  font-size: 1.1rem;
+  line-height: 2.2rem;
+  border-radius: 0.44rem;
+  position: absolute;
+  bottom: 0;
+}
+/* line 192, ../sass/screen.sass */
+.room-preview img {
+  max-width: 100%;
+}
+
+/* line 196, ../sass/screen.sass */
+.game .chat, .game .users {
+  width: 21%;
+}
+/* line 198, ../sass/screen.sass */
+.game .users {
+  display: inline;
+  float: left;
+  height: 100%;
+}
+/* line 201, ../sass/screen.sass */
+.game .users ol {
+  height: 60%;
+  font-size: 1.2rem;
+}
+/* line 204, ../sass/screen.sass */
+.game .users ol > li {
+  border-radius: 0.24rem;
+  padding: 0.24rem;
+  margin: 0.12rem;
+}
+/* line 206, ../sass/screen.sass */
+.game .game-canvas {
+  display: inline;
+  float: left;
+  width: 56%;
+  margin: 0 1%;
+  text-align: center;
+  border: 0.5rem solid #69858b;
+  line-height: 0;
+  font-size: 0;
+}
+/* line 214, ../sass/screen.sass */
+.game .game-canvas canvas {
+  width: 100%;
+}
+
+/* line 221, ../sass/screen.sass */
 .room-left, .game, #user-panel .room-left {
   display: none;
 }
 
-/* line 100, ../sass/screen.sass */
+/* line 223, ../sass/screen.sass */
 .user-in-room #user-panel .room-left {
   display: inline-block;
 }
 
-/* line 104, ../sass/screen.sass */
+/* line 227, ../sass/screen.sass */
 .user-in-room .game {
   display: block;
 }
-/* line 106, ../sass/screen.sass */
+/* line 229, ../sass/screen.sass */
 .user-in-room .room {
   display: none;
 }
 
-/* line 111, ../sass/screen.sass */
+/* line 234, ../sass/screen.sass */
 .room-list li {
   overflow: hidden;
   *zoom: 1;
   position: relative;
   cursor: pointer;
 }
-/* line 115, ../sass/screen.sass */
+/* line 238, ../sass/screen.sass */
 .room-list li strong {
   display: inline;
   float: left;
   width: 50%;
 }
-/* line 118, ../sass/screen.sass */
+/* line 241, ../sass/screen.sass */
 .room-list li span {
   display: inline;
   float: right;
   width: 30%;
 }
-/* line 121, ../sass/screen.sass */
+/* line 244, ../sass/screen.sass */
 .room-list li:after {
   content: attr(data-users) "/" attr(data-max);
   position: absolute;
@@ -162,59 +364,78 @@ body {
   width: 20%;
   top: 0;
   left: 50%;
-  margin-top: 5px;
+  margin-top: 0.5rem;
   text-align: center;
 }
 
-/* line 130, ../sass/screen.sass */
+/* line 255, ../sass/screen.sass */
 ol {
   list-style: none;
   padding: 0;
   margin: 0;
   overflow-y: scroll;
   color: white;
-  height: 540px;
 }
-/* line 137, ../sass/screen.sass */
+/* line 261, ../sass/screen.sass */
+ol:empty {
+  display: none;
+}
+/* line 263, ../sass/screen.sass */
 ol ul, ol li {
   list-style: none;
   margin: 0;
   padding: 0;
 }
-/* line 141, ../sass/screen.sass */
+/* line 267, ../sass/screen.sass */
 ol > li {
   background: #4a4343;
-  border-radius: 5px;
-  padding: 5px;
-  margin: 2px;
+  border-radius: 0.5rem;
+  padding: 0.5rem;
+  margin: 0.25rem;
 }
-/* line 146, ../sass/screen.sass */
+/* line 270, ../sass/screen.sass */
 ol > li:hover {
   background: #21211e;
 }
-/* line 149, ../sass/screen.sass */
+/* line 273, ../sass/screen.sass */
 ol ul li.m {
   text-align: center;
 }
-/* line 151, ../sass/screen.sass */
+/* line 275, ../sass/screen.sass */
 ol ul li.r {
   text-align: right;
 }
 
-/* line 153, ../sass/screen.sass */
+/* line 277, ../sass/screen.sass */
+h1 {
+  margin: 0;
+  padding: 0;
+  color: white;
+  font-size: 2.2rem;
+}
+
+/* line 283, ../sass/screen.sass */
+input {
+  border: 0.5rem solid #69858b;
+  margin: 0.5rem 0;
+  width: 100%;
+}
+
+/* line 288, ../sass/screen.sass */
 button {
-  height: 50px;
-  padding: 0 20px;
-  font-size: 20px;
-  line-height: 50px;
   text-align: center;
   background: #68848a;
   border: 0;
   color: white;
-  border-radius: 10px;
   cursor: pointer;
+  text-decoration: none;
+  height: 5rem;
+  padding: 0 2.5rem;
+  font-size: 2.5rem;
+  line-height: 5rem;
+  border-radius: 1rem;
 }
-/* line 164, ../sass/screen.sass */
+/* line 10, ../sass/screen.sass */
 button:hover {
   background: #21211e;
 }
