--- a/public/d/sass/screen.sass
+++ b/public/d/sass/screen.sass
@@ -288,3 +288,13 @@ input
 button
   +button
   +button-size(5rem)
+
+
+#debug
+  position: absolute
+  bottom: 0
+  right: 0
+  .latency
+    background: #770000
+    color: #ffffff
+    padding: 0 3px
