--- a/public/d/css/screen.css
+++ b/public/d/css/screen.css
@@ -10,21 +10,22 @@ html, body {
   height: 100%;
   padding: 0;
   margin: 0;
+  overflow: hidden;
 }
 
-/* line 33, ../sass/screen.sass */
+/* line 34, ../sass/screen.sass */
 html {
   font-size: 62.5%;
 }
 
-/* line 36, ../sass/screen.sass */
+/* line 37, ../sass/screen.sass */
 body {
   font: normal 1.5rem/1.4 arial;
   height: 100%;
   position: relative;
 }
 
-/* line 41, ../sass/screen.sass */
+/* line 42, ../sass/screen.sass */
 #wrap {
   width: 100%;
   height: 100%;
@@ -32,7 +33,7 @@ body {
   padding-top: 30px;
 }
 
-/* line 47, ../sass/screen.sass */
+/* line 48, ../sass/screen.sass */
 #user-panel {
   position: absolute;
   top: 0;
@@ -41,14 +42,14 @@ body {
   margin: 3px 0;
   text-align: center;
 }
-/* line 54, ../sass/screen.sass */
+/* line 55, ../sass/screen.sass */
 #user-panel .info {
   position: absolute;
   right: 0;
   top: 0;
   color: #000;
 }
-/* line 59, ../sass/screen.sass */
+/* line 60, ../sass/screen.sass */
 #user-panel .info .logout {
   height: 20px;
   line-height: 20px;
@@ -59,18 +60,18 @@ body {
   margin-left: 10px;
   color: #fff;
 }
-/* line 68, ../sass/screen.sass */
+/* line 69, ../sass/screen.sass */
 #user-panel ul, #user-panel li {
   margin: 0;
   padding: 0;
   list-style: none;
 }
-/* line 72, ../sass/screen.sass */
+/* line 73, ../sass/screen.sass */
 #user-panel ul {
   display: inline-block;
   text-align: center;
 }
-/* line 75, ../sass/screen.sass */
+/* line 76, ../sass/screen.sass */
 #user-panel li {
   display: inline-block;
   background: #68848A;
@@ -80,17 +81,17 @@ body {
   cursor: pointer;
   color: #fff;
 }
-/* line 83, ../sass/screen.sass */
+/* line 84, ../sass/screen.sass */
 #user-panel li:hover {
   background: #21211E;
 }
-/* line 85, ../sass/screen.sass */
+/* line 86, ../sass/screen.sass */
 #user-panel .room-left {
   display: inline-block;
   position: absolute;
   margin-left: 15px;
 }
-/* line 89, ../sass/screen.sass */
+/* line 90, ../sass/screen.sass */
 #user-panel .room-left a {
   text-align: center;
   background: #68848A;
@@ -110,12 +111,12 @@ body {
   background: #21211E;
 }
 
-/* line 94, ../sass/screen.sass */
+/* line 95, ../sass/screen.sass */
 .room, .game {
   height: 100%;
 }
 
-/* line 97, ../sass/screen.sass */
+/* line 98, ../sass/screen.sass */
 .room .chat, .room-list, .room-preview, .game {
   padding: 1rem;
   position: relative;
@@ -123,64 +124,64 @@ body {
   background: #969696;
 }
 
-/* line 103, ../sass/screen.sass */
+/* line 104, ../sass/screen.sass */
 .chat, .room-list, .room-preview {
   float: left;
   height: 100%;
 }
 
-/* line 107, ../sass/screen.sass */
+/* line 108, ../sass/screen.sass */
 .room-new-add {
   position: absolute;
   right: 10px;
   bottom: 10px;
 }
 
-/* line 112, ../sass/screen.sass */
+/* line 113, ../sass/screen.sass */
 .room .chat {
   width: 28%;
 }
 
-/* line 116, ../sass/screen.sass */
+/* line 117, ../sass/screen.sass */
 .chat ol {
   height: 90%;
   font-size: 1.2rem;
   color: #fff;
 }
-/* line 120, ../sass/screen.sass */
+/* line 121, ../sass/screen.sass */
 .chat ol > li {
   border-radius: 0.24rem;
   padding: 0.24rem;
   margin: 0.12rem;
 }
-/* line 122, ../sass/screen.sass */
+/* line 123, ../sass/screen.sass */
 .chat ol i {
   color: #ddcccc;
   font-style: normal;
 }
-/* line 125, ../sass/screen.sass */
+/* line 126, ../sass/screen.sass */
 .chat ol i:before, .chat ol i:after {
   color: #ffffff;
 }
-/* line 127, ../sass/screen.sass */
+/* line 128, ../sass/screen.sass */
 .chat ol i:before {
   content: "[";
 }
-/* line 129, ../sass/screen.sass */
+/* line 130, ../sass/screen.sass */
 .chat ol i:after {
   content: "]";
 }
-/* line 131, ../sass/screen.sass */
+/* line 132, ../sass/screen.sass */
 .chat ol strong {
   font-weight: normal;
   color: #969696;
 }
-/* line 134, ../sass/screen.sass */
+/* line 135, ../sass/screen.sass */
 .chat ol strong:after {
   content: " :";
   color: #fff;
 }
-/* line 137, ../sass/screen.sass */
+/* line 138, ../sass/screen.sass */
 .chat textarea {
   width: 100%;
   margin-top: 1rem;
@@ -188,28 +189,28 @@ body {
   border: 0.5rem solid #69858B;
 }
 
-/* line 143, ../sass/screen.sass */
+/* line 144, ../sass/screen.sass */
 .room-list {
   width: 40%;
   margin: 0 0.5%;
 }
-/* line 146, ../sass/screen.sass */
+/* line 147, ../sass/screen.sass */
 .room-list ol {
   height: 90%;
 }
 
-/* line 149, ../sass/screen.sass */
+/* line 150, ../sass/screen.sass */
 .room-preview {
   width: 30%;
 }
-/* line 151, ../sass/screen.sass */
+/* line 152, ../sass/screen.sass */
 .room-preview .preview {
   position: relative;
   padding: 0.5rem;
   background: #68848A;
   line-height: 1;
 }
-/* line 156, ../sass/screen.sass */
+/* line 157, ../sass/screen.sass */
 .room-preview .preview strong, .room-preview .preview i {
   display: block;
   position: absolute;
@@ -219,51 +220,51 @@ body {
   color: #fff;
   font-style: normal;
 }
-/* line 164, ../sass/screen.sass */
+/* line 165, ../sass/screen.sass */
 .room-preview .preview strong {
   top: 5%;
   left: 5%;
 }
-/* line 167, ../sass/screen.sass */
+/* line 168, ../sass/screen.sass */
 .room-preview .preview i {
   bottom: 5%;
   left: 5%;
 }
-/* line 170, ../sass/screen.sass */
+/* line 171, ../sass/screen.sass */
 .room-preview .teams {
   height: 40%;
 }
-/* line 172, ../sass/screen.sass */
+/* line 173, ../sass/screen.sass */
 .room-preview .teams[data-teams='2'] {
   overflow: hidden;
   *zoom: 1;
 }
-/* line 174, ../sass/screen.sass */
+/* line 175, ../sass/screen.sass */
 .room-preview .teams[data-teams='2'] > div {
   float: left;
   width: 50%;
 }
-/* line 177, ../sass/screen.sass */
+/* line 178, ../sass/screen.sass */
 .room-preview .teams > div {
   height: 100%;
   position: relative;
 }
-/* line 180, ../sass/screen.sass */
+/* line 181, ../sass/screen.sass */
 .room-preview .teams ol {
   height: 90%;
   font-size: 1.2rem;
 }
-/* line 183, ../sass/screen.sass */
+/* line 184, ../sass/screen.sass */
 .room-preview .teams ol > li {
   border-radius: 0.24rem;
   padding: 0.24rem;
   margin: 0.12rem;
 }
-/* line 185, ../sass/screen.sass */
+/* line 186, ../sass/screen.sass */
 .room-preview .teams ol strong {
   font-weight: normal;
 }
-/* line 187, ../sass/screen.sass */
+/* line 188, ../sass/screen.sass */
 .room-preview .teams button {
   height: 2.2rem;
   padding: 0 1.1rem;
@@ -273,32 +274,32 @@ body {
   position: absolute;
   bottom: 0;
 }
-/* line 191, ../sass/screen.sass */
+/* line 192, ../sass/screen.sass */
 .room-preview img {
   max-width: 100%;
 }
 
-/* line 195, ../sass/screen.sass */
+/* line 196, ../sass/screen.sass */
 .game .chat, .game .users {
   width: 21%;
 }
-/* line 197, ../sass/screen.sass */
+/* line 198, ../sass/screen.sass */
 .game .users {
   float: left;
   height: 100%;
 }
-/* line 200, ../sass/screen.sass */
+/* line 201, ../sass/screen.sass */
 .game .users ol {
   height: 60%;
   font-size: 1.2rem;
 }
-/* line 203, ../sass/screen.sass */
+/* line 204, ../sass/screen.sass */
 .game .users ol > li {
   border-radius: 0.24rem;
   padding: 0.24rem;
   margin: 0.12rem;
 }
-/* line 205, ../sass/screen.sass */
+/* line 206, ../sass/screen.sass */
 .game .game-canvas {
   float: left;
   height: 150px;
@@ -308,48 +309,48 @@ body {
   line-height: 0;
   font-size: 0;
 }
-/* line 213, ../sass/screen.sass */
+/* line 214, ../sass/screen.sass */
 .game .game-canvas canvas {
   width: 100%;
 }
 
-/* line 220, ../sass/screen.sass */
+/* line 221, ../sass/screen.sass */
 .room-left, .game, #user-panel .room-left {
   display: none;
 }
 
-/* line 222, ../sass/screen.sass */
+/* line 223, ../sass/screen.sass */
 .user-in-room #user-panel .room-left {
   display: inline-block;
 }
 
-/* line 226, ../sass/screen.sass */
+/* line 227, ../sass/screen.sass */
 .user-in-room .game {
   display: block;
 }
-/* line 228, ../sass/screen.sass */
+/* line 229, ../sass/screen.sass */
 .user-in-room .room {
   display: none;
 }
 
-/* line 233, ../sass/screen.sass */
+/* line 234, ../sass/screen.sass */
 .room-list li {
   overflow: hidden;
   *zoom: 1;
   position: relative;
   cursor: pointer;
 }
-/* line 237, ../sass/screen.sass */
+/* line 238, ../sass/screen.sass */
 .room-list li strong {
   float: left;
   width: 50%;
 }
-/* line 240, ../sass/screen.sass */
+/* line 241, ../sass/screen.sass */
 .room-list li span {
   float: right;
   width: 30%;
 }
-/* line 243, ../sass/screen.sass */
+/* line 244, ../sass/screen.sass */
 .room-list li:after {
   content: attr(data-users) "/" attr(data-max);
   position: absolute;
@@ -361,7 +362,7 @@ body {
   text-align: center;
 }
 
-/* line 254, ../sass/screen.sass */
+/* line 255, ../sass/screen.sass */
 ol {
   list-style: none;
   padding: 0;
@@ -369,37 +370,37 @@ ol {
   overflow-y: scroll;
   color: #fff;
 }
-/* line 260, ../sass/screen.sass */
+/* line 261, ../sass/screen.sass */
 ol:empty {
   display: none;
 }
-/* line 262, ../sass/screen.sass */
+/* line 263, ../sass/screen.sass */
 ol ul, ol li {
   list-style: none;
   margin: 0;
   padding: 0;
 }
-/* line 266, ../sass/screen.sass */
+/* line 267, ../sass/screen.sass */
 ol > li {
   background: #4A4343;
   border-radius: 0.5rem;
   padding: 0.5rem;
   margin: 0.25rem;
 }
-/* line 269, ../sass/screen.sass */
+/* line 270, ../sass/screen.sass */
 ol > li:hover {
   background: #21211E;
 }
-/* line 272, ../sass/screen.sass */
+/* line 273, ../sass/screen.sass */
 ol ul li.m {
   text-align: center;
 }
-/* line 274, ../sass/screen.sass */
+/* line 275, ../sass/screen.sass */
 ol ul li.r {
   text-align: right;
 }
 
-/* line 276, ../sass/screen.sass */
+/* line 277, ../sass/screen.sass */
 h1 {
   margin: 0;
   padding: 0;
@@ -407,14 +408,14 @@ h1 {
   font-size: 2.2rem;
 }
 
-/* line 282, ../sass/screen.sass */
+/* line 283, ../sass/screen.sass */
 input {
   border: 0.5rem solid #69858B;
   margin: 0.5rem 0;
   width: 100%;
 }
 
-/* line 287, ../sass/screen.sass */
+/* line 288, ../sass/screen.sass */
 button {
   text-align: center;
   background: #68848A;
@@ -433,13 +434,13 @@ button:hover {
   background: #21211E;
 }
 
-/* line 292, ../sass/screen.sass */
+/* line 293, ../sass/screen.sass */
 #debug {
   position: absolute;
   bottom: 0;
   right: 0;
 }
-/* line 296, ../sass/screen.sass */
+/* line 297, ../sass/screen.sass */
 #debug .latency {
   background: #770000;
   color: #ffffff;
