--- a/public/d/sass/screen.sass
+++ b/public/d/sass/screen.sass
@@ -142,13 +142,14 @@ body
     border: 0.5rem solid #69858B
 
 .room-list
-  width: 40%
+  width: 58%
   margin: 0 0.5%
+  padding-bottom: 6rem
   ol
     height: 90%
 
 .room-preview
-  width: 30%
+  width: 40%
   .preview
     position: relative
     padding: 0.5rem
@@ -193,20 +194,9 @@ body
     max-width: 100%
 
 .game
-  .chat, .users
-    width: 21%
-  .users
-    +float-left
-    height: 100%
-    ol
-      height: 60%
-      font-size: 1.2rem
-      >li
-        +li-size(0.24rem)
   .game-canvas
-    +float-left
-    height: 150px
-    margin: 0 1%
+    width: 50%
+    margin: 1%
     text-align: center
     border: 0.5rem solid #69858B
     line-height: 0
