--- a/public/d/sass/screen.sass
+++ b/public/d/sass/screen.sass
@@ -44,6 +44,8 @@ body
   height: 100%
   position: relative
   padding-top: 30px
+  &.user-in-room
+    padding-top: 0
 
 #user-panel
   position: absolute
@@ -93,9 +95,8 @@ body
       +button-size(2.5rem)
 
 .room, .game
-  //height: 620px
   height: 100%
-.room .chat, .room-list, .room-preview, .game
+.room .chat, .room-list, .room-preview
   padding: 1rem
   position: relative
   border-radius: 1rem
@@ -195,14 +196,9 @@ body
 
 .game
   .game-canvas
-    width: 50%
-    margin: 1%
-    text-align: center
-    border: 0.5rem solid #69858B
-    line-height: 0
-    font-size: 0
     canvas
       width: 100%
+      height: 100%
 
 
 
