--- a/public/d/sass/screen.sass
+++ b/public/d/sass/screen.sass
@@ -170,25 +170,15 @@ body
     i
       bottom: 5%
       left: 5%
-  .teams
-    height: 40%
-    &[data-teams='2']
-      +clearfix
-      >div
-        +float-left
-        width: 50%
-    >div
-      height: 100%
-      position: relative
+  .users
+    height: 50%
+    position: relative
     ol
-      height: 90%
-      font-size: 1.2rem
-      >li
-        +li-size(0.24rem)
+      height: 80%
       strong
         font-weight: normal
     button
-      +button-size(2.2rem)
+      +button-size(3rem)
       position: absolute
       bottom: 0
   img
